--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/reverb": "^1.6",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.22",
         "yajra/laravel-datatables-oracle": "^12.6"
     },
     "require-dev": {
